// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cta-button > passes through additional html attributes 1`] = `
<a
  class="cta-btn cta-btn--default class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="number"
>
  <span
    class="cta-btn__cell"
  >
    <span />
    <!--M#s0-4-0-->
    <svg
      aria-hidden="true"
      class="icon icon--24"
      data-marko-key="@svg s0-4-0"
      focusable="false"
    >
      <defs
        data-marko-key="@defs s0-4-0"
      >
        <symbol
          id="icon-arrow-right-24"
          viewBox="0 0 24 24"
        >
          <path
            d="m21.71 11.29-8-8a1.004 1.004 0 0 0-1.42 1.42l6.3 6.29H3a1 1 0 0 0 0 2h15.59l-6.3 6.29a1.001 1.001 0 0 0 0 1.42 1.001 1.001 0 0 0 1.42 0l8-8a1.001 1.001 0 0 0 0-1.42Z"
          />
        </symbol>
      </defs>
      <use
        href="#icon-arrow-right-24"
      />
    </svg>
    <!--M/-->
  </span>
</a>
`;

exports[`cta-button > passes through additional html attributes 2`] = `
<a
  class="cta-btn cta-btn--default class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="number"
>
  <span
    class="cta-btn__cell"
  >
    <span />
    <!--M#s0-4-0-->
    <svg
      aria-hidden="true"
      class="icon icon--24"
      data-marko-key="@svg s0-4-0"
      focusable="false"
    >
      <defs
        data-marko-key="@defs s0-4-0"
      >
        <symbol
          id="icon-arrow-right-24"
          viewBox="0 0 24 24"
        >
          <path
            d="m21.71 11.29-8-8a1.004 1.004 0 0 0-1.42 1.42l6.3 6.29H3a1 1 0 0 0 0 2h15.59l-6.3 6.29a1.001 1.001 0 0 0 0 1.42 1.001 1.001 0 0 0 1.42 0l8-8a1.001 1.001 0 0 0 0-1.42Z"
          />
        </symbol>
      </defs>
      <use
        href="#icon-arrow-right-24"
      />
    </svg>
    <!--M/-->
  </span>
</a>
`;

exports[`cta-button > renders basic cta button 1`] = `
<span>
  CTA Text
</span>
`;

exports[`cta-button > renders large cta button 1`] = `
<span>
  CTA Text
</span>
`;

exports[`cta-button > renders small cta button 1`] = `
<a
  class="cta-btn cta-btn--small"
>
  <span
    class="cta-btn__cell"
  >
    <span>
      CTA Text
    </span>
    <!--M#s0-4-0-->
    <svg
      aria-hidden="true"
      class="icon icon--24"
      data-marko-key="@svg s0-4-0"
      focusable="false"
    >
      <defs
        data-marko-key="@defs s0-4-0"
      >
        <symbol
          id="icon-arrow-right-24"
          viewBox="0 0 24 24"
        >
          <path
            d="m21.71 11.29-8-8a1.004 1.004 0 0 0-1.42 1.42l6.3 6.29H3a1 1 0 0 0 0 2h15.59l-6.3 6.29a1.001 1.001 0 0 0 0 1.42 1.001 1.001 0 0 0 1.42 0l8-8a1.001 1.001 0 0 0 0-1.42Z"
          />
        </symbol>
      </defs>
      <use
        href="#icon-arrow-right-24"
      />
    </svg>
    <!--M/-->
  </span>
</a>
`;
